# booker_challange

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
challange_files/Example/: queries.txt  resources.json  results.txt
include/: parsers.hpp  resource.hpp  resource_manager.hpp
src/: main.cpp  parsers.cpp  resource.cpp  resource_manager.cpp
tests/: test_resource.cpp
